[gd_scene load_steps=33 format=2]

[ext_resource path="res://CaveTiles.tres" type="TileSet" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/PenguinSprite.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Snowflake.tscn" type="PackedScene" id=4]
[ext_resource path="res://winner.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/744.jpg" type="Texture" id=6]
[ext_resource path="res://Scripts/Lives.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=8]
[ext_resource path="res://Scripts/World.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=11]
[ext_resource path="res://Assets/Icey.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Portal2D.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/media.io_run_under_fire.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/Droplets3.png" type="Texture" id=16]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 319, 368 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 368, 319, 368 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 319, 368, 319, 368 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 638, 368, 319, 368 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 957, 368, 319, 368 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 736, 319, 368 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 319, 736, 319, 368 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 638, 736, 319, 368 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 319, 368 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 319, 0, 319, 368 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 638, 0, 319, 368 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 957, 0, 319, 368 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "run",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=14]

[sub_resource type="ParticlesMaterial" id=16]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 32, 32 )

[node name="World" type="Node"]
script = ExtResource( 9 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1088, 433 )
scale = Vector2( 0.727333, 0.671333 )
texture = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -256, 0 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 1
collision_layer = 5
collision_mask = 5
format = 1
tile_data = PoolIntArray( 185, 8, 0, 186, 8, 0, 187, 8, 0, 188, 8, 0, 189, 8, 0, 190, 8, 0, 65721, 8, 0, 65724, 8, 0, 65726, 8, 0, 131257, 8, 0, 131259, 8, 0, 131260, 8, 0, 131262, 8, 0, 196793, 8, 0, 196795, 8, 0, 196796, 8, 0, 196798, 8, 0, 262329, 8, 0, 262331, 8, 0, 262332, 8, 0, 262334, 8, 0, 327865, 8, 0, 327867, 8, 0, 327868, 8, 0, 327870, 8, 0, 393216, 0, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393229, 2, 0, 393251, 1, 0, 393253, 2, 0, 393254, 2, 0, 393255, 2, 0, 393256, 2, 0, 393257, 2, 0, 393258, 2, 0, 393401, 8, 0, 393403, 8, 0, 393404, 8, 0, 393406, 8, 0, 458937, 8, 0, 458938, 8, 0, 458939, 8, 0, 458940, 8, 0, 458941, 8, 0, 458942, 8, 0, 524288, 3, 0, 524290, 8, 0, 524292, 1610612744, 0, 524293, 1610612744, 0, 524294, 8, 0, 524296, 5, 0, 524298, 8, 0, 524299, 8, 0, 524301, 6, 0, 524473, 8, 0, 524474, 8, 0, 524475, 8, 0, 524476, 8, 0, 524477, 8, 0, 524478, 8, 0, 589826, 8, 0, 589827, 8, 0, 589837, 6, 0, 590012, 8, 0, 590013, 8, 0, 590014, 8, 0, 655360, 4, 0, 655362, 8, 0, 655363, 8, 0, 655364, 8, 0, 655365, 8, 0, 655366, 8, 0, 655367, 8, 0, 655369, 8, 0, 655371, 8, 0, 655373, 6, 0, 655418, 0, 0, 655545, 8, 0, 655546, 8, 0, 655547, 8, 0, 655548, 8, 0, 655549, 8, 0, 655550, 8, 0, 720907, 8, 0, 720909, 6, 0, 721081, 8, 0, 721082, 8, 0, 721083, 8, 0, 721084, 8, 0, 721085, 8, 0, 786432, 3, 0, 786434, 1610612744, 0, 786435, 8, 0, 786436, 8, 0, 786438, 8, 0, 786439, 8, 0, 786440, 8, 0, 786441, 8, 0, 786443, 8, 0, 786445, 6, 0, 786617, 8, 0, 786618, 8, 0, 786619, 8, 0, 786620, 8, 0, 786621, 8, 0, 851970, 1610612744, 0, 851972, 8, 0, 851973, 8, 0, 851974, 8, 0, 851975, 8, 0, 851977, 8, 0, 851979, 8, 0, 851981, 6, 0, 851992, 0, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851997, 1, 0, 851998, 1, 0, 851999, 1, 0, 852000, 1, 0, 852001, 1, 0, 852002, 1, 0, 852004, 2, 0, 852153, 8, 0, 852154, 8, 0, 852155, 8, 0, 852156, 8, 0, 852157, 8, 0, 917504, 4, 0, 917517, 6, 0, 983040, 4, 0, 983042, 5, 0, 983044, 1610612744, 0, 983045, 1610612744, 0, 983046, 1610612744, 0, 983047, 1610612744, 0, 983048, 8, 0, 983050, 1610612744, 0, 983051, 1610612744, 0, 983053, 6, 0, 983064, 4, 0, 983065, 8, 0, 983066, 8, 0, 983068, 5, 0, 983070, 8, 0, 983072, 8, 0, 983074, 8, 0, 983076, 6, 0, 983225, 8, 0, 983226, 8, 0, 983227, 8, 0, 983228, 8, 0, 983229, 8, 0, 1048576, 4, 0, 1048584, 8, 0, 1048600, 4, 0, 1048601, 8, 0, 1048602, 8, 0, 1048606, 8, 0, 1048608, 8, 0, 1048610, 8, 0, 1048611, 8, 0, 1048612, 6, 0, 1048765, 8, 0, 1114112, 4, 0, 1114114, 8, 0, 1114115, 8, 0, 1114116, 8, 0, 1114117, 8, 0, 1114118, 8, 0, 1114120, 8, 0, 1114121, 1610612744, 0, 1114123, 5, 0, 1114125, 6, 0, 1114136, 4, 0, 1114138, 8, 0, 1114140, 8, 0, 1114142, 8, 0, 1114147, 8, 0, 1114148, 6, 0, 1114297, 8, 0, 1114298, 8, 0, 1114299, 8, 0, 1114300, 8, 0, 1114301, 8, 0, 1179648, 4, 0, 1179656, 1610612744, 0, 1179674, 8, 0, 1179676, 8, 0, 1179678, 8, 0, 1179680, 5, 0, 1179682, 8, 0, 1179683, 8, 0, 1179684, 6, 0, 1179833, 8, 0, 1179834, 8, 0, 1179835, 8, 0, 1179836, 8, 0, 1179837, 8, 0, 1245184, 4, 0, 1245186, 8, 0, 1245187, 8, 0, 1245188, 8, 0, 1245189, 8, 0, 1245190, 8, 0, 1245192, 1610612744, 0, 1245193, 1610612744, 0, 1245194, 1610612744, 0, 1245195, 1610612744, 0, 1245197, 9, 0, 1245199, 1, 0, 1245201, 1, 0, 1245203, 1, 0, 1245204, 1, 0, 1245205, 1, 0, 1245206, 1, 0, 1245208, 7, 0, 1245210, 8, 0, 1245212, 8, 0, 1245214, 8, 0, 1245219, 8, 0, 1245220, 6, 0, 1245369, 8, 0, 1245370, 8, 0, 1245371, 8, 0, 1245372, 8, 0, 1245373, 8, 0, 1310720, 4, 0, 1310722, 8, 0, 1310723, 8, 0, 1310724, 8, 0, 1310725, 8, 0, 1310726, 8, 0, 1310727, 8, 0, 1310728, 8, 0, 1310729, 8, 0, 1310730, 8, 0, 1310731, 8, 0, 1310732, 8, 0, 1310746, 8, 0, 1310748, 8, 0, 1310750, 8, 0, 1310752, 8, 0, 1310754, 8, 0, 1310756, 6, 0, 1310905, 8, 0, 1310907, 8, 0, 1310909, 8, 0, 1376270, 1073741825, 0, 1376272, 1073741825, 0, 1376274, 1073741826, 0, 1376276, 1073741825, 0, 1376278, 1073741826, 0, 1376280, 1073741825, 0, 1376441, 8, 0, 1376442, 8, 0, 1376443, 8, 0, 1376444, 8, 0, 1376445, 8, 0, 1441792, 1610612737, 0, 1441794, 1610612737, 0, 1441796, 1610612737, 0, 1441798, 1610612737, 0, 1441800, 1610612737, 0, 1441802, 1610612737, 0, 1441804, 1610612737, 0, 1441818, 1610612737, 0, 1441820, 1610612737, 0, 1441822, 1610612737, 0, 1441824, 1610612737, 0, 1441826, 1610612737, 0, 1441828, 1610612736, 0, 1441978, 8, 0, 1441979, 8, 0, 1441980, 8, 0, 1441981, 8, 0, 1507354, 1073741830, 0, 1507513, 8, 0, 1507514, 8, 0, 1507515, 8, 0, 1507516, 8, 0, 1507517, 8, 0, 1572890, 1073741830, 0, 1573050, 8, 0, 1573051, 8, 0, 1573053, 8, 0, 1638426, 1073741830, 0, 1638586, 8, 0, 1638587, 8, 0, 1638589, 8, 0, 1703962, 1073741830, 0, 1704122, 8, 0, 1704123, 8, 0, 1704125, 8, 0, 1769498, 1073741830, 0, 1769657, 8, 0, 1769658, 8, 0, 1769659, 8, 0, 1769660, 8, 0, 1769661, 8, 0, 1835034, 1073741830, 0, 1835193, 8, 0, 1835194, 8, 0, 1835195, 8, 0, 1835197, 8, 0, 1900570, 1073741830, 0, 1900730, 8, 0, 1900731, 8, 0, 1900733, 8, 0, 1966106, 1073741830, 0, 1966265, 8, 0, 1966266, 8, 0, 1966267, 8, 0, 1966268, 8, 0, 1966269, 8, 0, 2031642, 1073741830, 0, 2031801, 8, 0, 2031802, 8, 0, 2031803, 8, 0, 2031804, 8, 0, 2031805, 8, 0, 2097178, 1073741830, 0, 2097239, 536870914, 0, 2097338, 8, 0, 2097339, 8, 0, 2097341, 8, 0, 2162714, 1073741830, 0, 2162874, 8, 0, 2162875, 8, 0, 2162877, 8, 0, 2228250, 1073741830, 0, 2228311, 1610612742, 0, 2228410, 8, 0, 2228411, 8, 0, 2228413, 8, 0, 2293774, 6, 0, 2293847, 1610612742, 0, 2293946, 8, 0, 2293947, 8, 0, 2293949, 8, 0, 2359310, 6, 0, 2359322, 536870919, 0, 2359323, 1073741824, 0, 2359325, 2, 0, 2359326, 536870914, 0, 2359336, 536870913, 0, 2359337, 536870913, 0, 2359338, 536870913, 0, 2359339, 536870913, 0, 2359340, 536870913, 0, 2359341, 536870913, 0, 2359342, 536870913, 0, 2359343, 536870913, 0, 2359344, 536870913, 0, 2359345, 536870913, 0, 2359346, 536870913, 0, 2359347, 536870913, 0, 2359348, 536870913, 0, 2359350, 536870913, 0, 2359352, 536870913, 0, 2359353, 536870913, 0, 2359354, 536870913, 0, 2359355, 536870913, 0, 2359356, 536870913, 0, 2359357, 536870913, 0, 2359358, 536870913, 0, 2359359, 536870913, 0, 2359360, 536870913, 0, 2359361, 536870913, 0, 2359363, 536870912, 0, 2359383, 1610612742, 0, 2359482, 8, 0, 2359483, 8, 0, 2359485, 8, 0, 2424862, 536870918, 0, 2424919, 1610612742, 0, 2425018, 8, 0, 2425019, 8, 0, 2425021, 8, 0, 2490382, 6, 0, 2490435, 1610612739, 0, 2490455, 1610612742, 0, 2490554, 8, 0, 2490555, 8, 0, 2490557, 8, 0, 2555918, 6, 0, 2555934, 536870918, 0, 2555971, 1610612739, 0, 2555991, 1610612742, 0, 2556090, 8, 0, 2556091, 8, 0, 2556093, 8, 0, 2621507, 1610612739, 0, 2621527, 1610612742, 0, 2621626, 8, 0, 2621627, 8, 0, 2621629, 8, 0, 2686990, 6, 0, 2687006, 536870918, 0, 2687043, 1610612739, 0, 2687063, 1610612742, 0, 2687161, 8, 0, 2687162, 8, 0, 2687163, 8, 0, 2687165, 8, 0, 2752526, 6, 0, 2752542, 536870918, 0, 2752579, 1610612739, 0, 2752581, 536870913, 0, 2752583, 536870913, 0, 2752584, 536870913, 0, 2752585, 536870913, 0, 2752586, 536870913, 0, 2752599, 1610612742, 0, 2752697, 8, 0, 2752698, 8, 0, 2752699, 8, 0, 2752701, 8, 0, 2818062, 6, 0, 2818078, 536870918, 0, 2818115, 1610612739, 0, 2818135, 1610612742, 0, 2818233, 8, 0, 2818234, 8, 0, 2818235, 8, 0, 2818237, 8, 0, 2883598, 6, 0, 2883614, 536870918, 0, 2883651, 1610612739, 0, 2883671, 1610612742, 0, 2883769, 8, 0, 2883770, 8, 0, 2883771, 8, 0, 2883773, 8, 0, 2949134, 6, 0, 2949150, 536870918, 0, 2949187, 1610612739, 0, 2949207, 1610612742, 0, 2949305, 8, 0, 2949306, 8, 0, 2949307, 8, 0, 2949309, 8, 0, 3014670, 6, 0, 3014686, 536870918, 0, 3014723, 1610612739, 0, 3014841, 8, 0, 3014842, 8, 0, 3014843, 8, 0, 3014845, 8, 0, 3080206, 6, 0, 3080222, 536870918, 0, 3080259, 1610612739, 0, 3080279, 536870918, 0, 3080377, 8, 0, 3080378, 8, 0, 3080379, 8, 0, 3080381, 8, 0, 3145742, 6, 0, 3145758, 536870918, 0, 3145795, 1610612739, 0, 3145808, 536870913, 0, 3145809, 536870913, 0, 3145810, 536870913, 0, 3145811, 536870913, 0, 3145812, 536870913, 0, 3145813, 536870913, 0, 3145815, 536870918, 0, 3145913, 8, 0, 3145914, 8, 0, 3145915, 8, 0, 3145917, 8, 0, 3211278, 6, 0, 3211294, 536870918, 0, 3211331, 1610612739, 0, 3211351, 536870918, 0, 3211449, 8, 0, 3211450, 8, 0, 3211451, 8, 0, 3211453, 8, 0, 3276814, 6, 0, 3276830, 536870918, 0, 3276867, 1610612739, 0, 3276887, 536870918, 0, 3276985, 8, 0, 3276986, 8, 0, 3276987, 8, 0, 3276989, 8, 0, 3342350, 6, 0, 3342366, 536870918, 0, 3342403, 1610612739, 0, 3342423, 536870918, 0, 3342521, 8, 0, 3342522, 8, 0, 3342523, 8, 0, 3342525, 8, 0, 3407886, 6, 0, 3407902, 536870918, 0, 3407939, 1610612739, 0, 3407959, 536870918, 0, 3408057, 8, 0, 3408058, 8, 0, 3408059, 8, 0, 3408061, 8, 0, 3473495, 536870918, 0, 3473594, 8, 0, 3473595, 8, 0, 3473597, 8, 0, 3538958, 6, 0, 3538974, 1073741824, 0, 3538976, 1073741825, 0, 3538977, 1073741825, 0, 3538978, 1073741825, 0, 3538979, 1073741825, 0, 3538980, 1073741825, 0, 3538981, 1073741825, 0, 3538982, 1073741825, 0, 3538983, 1073741825, 0, 3538984, 1073741825, 0, 3538985, 1073741825, 0, 3538986, 1073741825, 0, 3538987, 1073741825, 0, 3538988, 1073741825, 0, 3538990, 1073741825, 0, 3538992, 1073741831, 0, 3538994, 1610612743, 0, 3538996, 1610612737, 0, 3538997, 1610612737, 0, 3538998, 1610612737, 0, 3538999, 1610612737, 0, 3539000, 1610612737, 0, 3539001, 1610612737, 0, 3539002, 1610612737, 0, 3539003, 1610612737, 0, 3539004, 1610612737, 0, 3539005, 1610612737, 0, 3539006, 1610612737, 0, 3539007, 1610612737, 0, 3539008, 1610612737, 0, 3539009, 1610612737, 0, 3539011, 1610612736, 0, 3539013, 536870913, 0, 3539014, 536870913, 0, 3539015, 536870913, 0, 3539016, 536870913, 0, 3539017, 536870913, 0, 3539018, 536870913, 0, 3539031, 536870918, 0, 3539130, 8, 0, 3539131, 8, 0, 3539132, 8, 0, 3539133, 8, 0, 3604567, 536870918, 0, 3604666, 8, 0, 3604668, 8, 0, 3604669, 8, 0, 3670030, 6, 0, 3670064, 1073741828, 0, 3670066, 536870915, 0, 3670103, 536870918, 0, 3670201, 8, 0, 3670202, 8, 0, 3670204, 8, 0, 3670205, 8, 0, 3735566, 6, 0, 3735600, 1073741828, 0, 3735639, 536870918, 0, 3735737, 8, 0, 3735738, 8, 0, 3735739, 8, 0, 3735740, 8, 0, 3735741, 8, 0, 3801102, 6, 0, 3801136, 1073741828, 0, 3801138, 536870915, 0, 3801175, 536870918, 0, 3801273, 8, 0, 3801275, 8, 0, 3801276, 8, 0, 3801277, 8, 0, 3866638, 6, 0, 3866672, 1073741828, 0, 3866711, 536870918, 0, 3866809, 8, 0, 3866811, 8, 0, 3866813, 8, 0, 3932174, 6, 0, 3932208, 1073741828, 0, 3932210, 536870915, 0, 3932247, 536870918, 0, 3932345, 8, 0, 3932346, 8, 0, 3932347, 8, 0, 3932349, 8, 0, 3997710, 6, 0, 3997773, 536870913, 0, 3997775, 536870913, 0, 3997776, 536870913, 0, 3997777, 536870913, 0, 3997778, 536870913, 0, 3997779, 536870913, 0, 3997780, 536870913, 0, 3997781, 536870913, 0, 3997783, 536870918, 0, 3997881, 8, 0, 3997882, 8, 0, 3997883, 8, 0, 3997885, 8, 0, 4063246, 6, 0, 4063261, 536870914, 0, 4063263, 536870913, 0, 4063264, 536870913, 0, 4063265, 536870913, 0, 4063266, 536870913, 0, 4063267, 536870913, 0, 4063268, 536870913, 0, 4063269, 536870913, 0, 4063270, 536870913, 0, 4063272, 536870912, 0, 4063280, 1073741824, 0, 4063282, 1073741825, 0, 4063319, 536870918, 0, 4063418, 8, 0, 4063419, 8, 0, 4063421, 8, 0, 4128782, 6, 0, 4128855, 536870918, 0, 4128954, 8, 0, 4128955, 8, 0, 4128957, 8, 0, 4194318, 6, 0, 4194333, 536870918, 0, 4194344, 536870915, 0, 4194391, 536870918, 0, 4194490, 8, 0, 4194491, 8, 0, 4194493, 8, 0, 4259854, 6, 0, 4259869, 536870918, 0, 4259927, 536870918, 0, 4260026, 8, 0, 4260027, 8, 0, 4260029, 8, 0, 4325390, 6, 0, 4325405, 536870918, 0, 4325416, 536870915, 0, 4325463, 536870918, 0, 4325562, 8, 0, 4325563, 8, 0, 4325565, 8, 0, 4391098, 8, 0, 4391099, 8, 0, 4391101, 8, 0, 4456462, 9, 0, 4456464, 1, 0, 4456465, 1, 0, 4456466, 1, 0, 4456467, 1, 0, 4456468, 1, 0, 4456469, 1, 0, 4456470, 1, 0, 4456471, 1, 0, 4456472, 1, 0, 4456473, 1, 0, 4456474, 1, 0, 4456475, 1, 0, 4456477, 7, 0, 4456488, 536870919, 0, 4456490, 536870913, 0, 4456491, 536870913, 0, 4456492, 536870913, 0, 4456493, 536870913, 0, 4456494, 536870913, 0, 4456495, 536870913, 0, 4456496, 536870913, 0, 4456497, 536870913, 0, 4456498, 536870913, 0, 4456499, 536870913, 0, 4456500, 536870913, 0, 4456501, 536870913, 0, 4456502, 536870913, 0, 4456503, 536870913, 0, 4456504, 536870913, 0, 4456505, 536870913, 0, 4456506, 536870913, 0, 4456507, 536870913, 0, 4456508, 536870913, 0, 4456509, 536870913, 0, 4456510, 536870913, 0, 4456511, 536870913, 0, 4456513, 536870913, 0, 4456515, 536870913, 0, 4456517, 536870913, 0, 4456519, 536870913, 0, 4456521, 536870913, 0, 4456523, 536870913, 0, 4456524, 536870913, 0, 4456525, 536870913, 0, 4456526, 536870913, 0, 4456527, 536870913, 0, 4456528, 536870913, 0, 4456529, 536870913, 0, 4456530, 536870913, 0, 4456531, 536870913, 0, 4456532, 536870913, 0, 4456533, 536870913, 0, 4456535, 536870921, 0, 4456633, 8, 0, 4456634, 8, 0, 4456635, 8, 0, 4456637, 8, 0, 4522169, 8, 0, 4522170, 8, 0, 4522171, 8, 0, 4522173, 8, 0, 4587705, 8, 0, 4587706, 8, 0, 4587707, 8, 0, 4587709, 8, 0, 4653241, 8, 0, 4653242, 8, 0, 4653243, 8, 0, 4653245, 8, 0, 4718777, 8, 0, 4718778, 8, 0, 4718779, 8, 0, 4718781, 8, 0, 4784313, 8, 0, 4784314, 8, 0, 4784315, 8, 0, 4784317, 8, 0, 4849853, 8, 0, 4915385, 8, 0, 4915386, 8, 0, 4915387, 8, 0, 4915388, 8, 0, 4915389, 8, 0, 4980925, 8, 0, 5046461, 8, 0, 5111997, 8, 0 )

[node name="Portal2D" parent="." instance=ExtResource( 14 )]
position = Vector2( 768, 832 )
collision_layer = 7
collision_mask = 7
next_scene = ExtResource( 5 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 32, 936 )
collision_layer = 4
collision_mask = 4
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Body" type="Node2D" parent="Player"]
position = Vector2( -256, -320 )

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
visible = false
position = Vector2( 0, -2.39999 )
scale = Vector2( 0.2, 0.186957 )
frames = SubResource( 13 )
animation = "idle"
playing = true

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
script = ExtResource( 10 )

[node name="Lives" type="Label" parent="Player/Camera2D"]
anchor_left = -0.094
anchor_top = 0.053
anchor_right = -0.094
anchor_bottom = 0.053
margin_left = -512.0
margin_top = -288.0
margin_right = -471.0
margin_bottom = -274.0
text = "Lives: "
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Player/Camera2D"]
margin_left = 416.0
margin_top = -288.0
margin_right = 459.0
margin_bottom = -256.0
text = "Score: "
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score Counter" type="Node" parent="Player/Camera2D"]

[node name="PhysicsShape" type="CollisionShape2D" parent="Player"]
scale = Vector2( 3, 3 )
shape = SubResource( 14 )

[node name="Particles2D" type="Particles2D" parent="Player"]
scale = Vector2( 0.25, 0.25 )
lifetime = 2.0
process_material = SubResource( 16 )
texture = ExtResource( 16 )

[node name="Walls" type="Node2D" parent="."]
visible = false
position = Vector2( -32, -160 )
scale = Vector2( 3.33085, 1.72721 )

[node name="Wall7Big" type="StaticBody2D" parent="Walls"]
position = Vector2( -105.679, 203.796 )
scale = Vector2( 1, 11 )
collision_layer = 4
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall7Big"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall7Big"]
shape = SubResource( 15 )

[node name="snow" type="Node2D" parent="."]

[node name="Snowflake2" parent="snow" instance=ExtResource( 4 )]
position = Vector2( 320, 704 )
scale = Vector2( 0.5, 0.5 )

[node name="Snowflake4" parent="snow" instance=ExtResource( 4 )]
position = Vector2( 896, 832 )
scale = Vector2( 0.5, 0.5 )

[node name="Snowflake3" parent="snow" instance=ExtResource( 4 )]
position = Vector2( 1056, 1056 )
scale = Vector2( 0.5, 0.5 )

[node name="Area2D" parent="." instance=ExtResource( 13 )]
position = Vector2( 896, 1056 )
collision_layer = 7
collision_mask = 7

[node name="Area2D2" parent="." instance=ExtResource( 13 )]
position = Vector2( 160, 1056 )
collision_layer = 7
collision_mask = 7

[node name="Area2D3" parent="." instance=ExtResource( 13 )]
position = Vector2( 512, 832 )
collision_layer = 7
collision_mask = 7

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
[connection signal="health_changed" from="Player" to="Player/Camera2D" method="_on_Player_health_changed"]
[connection signal="score_changed" from="Player" to="." method="_on_Player_score_changed"]
[connection signal="score_changed" from="Player" to="Player/Camera2D" method="_on_Player_score_changed"]
[connection signal="body_entered" from="snow/Snowflake2" to="Player" method="_on_Snowflake2_body_entered"]
[connection signal="body_entered" from="snow/Snowflake4" to="Player" method="_on_Snowflake2_body_entered"]
[connection signal="body_entered" from="snow/Snowflake3" to="Player" method="_on_Snowflake2_body_entered"]
[connection signal="body_entered" from="Area2D" to="Player" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="Player" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D3" to="Player" method="_on_Area2D_body_entered"]
